# jooksuai

./: .env.example  .gitignore  LICENSE  PROJECT_PLAN.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: tests.yml
.streamlit/: config.toml
data/: sample_activities.csv
docs/: interview_script.md  supabase_schema.sql
scripts/: enrich_strava_with_polar.py  strava_bootstrap.py  validate.py
src/jooksuai/: __init__.py  config.py
src/jooksuai/data/: __init__.py  csv_loader.py  models.py  polar.py  sample.py  storage.py
src/jooksuai/llm/: __init__.py  _json_utils.py  client.py  prompts.py
src/jooksuai/metrics/: __init__.py  load.py  personal_bests.py
src/jooksuai/planning/: __init__.py  generator.py  prompts.py
src/jooksuai/rules/: __init__.py
src/jooksuai/ui/: __init__.py  charts.py
src/vorm/: auth.py  config.py
src/vorm/data/: __init__.py  csv_loader.py  garmin.py  models.py  polar.py  storage.py  strava.py  supabase_store.py
src/vorm/llm/: client.py  prompts.py
src/vorm/metrics/: __init__.py  forecast.py
src/vorm/planning/: generator.py  models.py
src/vorm/rules/: safety.py
src/vorm/ui/: charts.py  (+6 more)
tests/: conftest.py  test_athlete_profile.py  test_auth.py  test_auth_role.py  test_charts_zones.py  test_coach_decision.py  test_csv_loader.py  test_forecast.py  test_garmin.py  test_metrics.py  test_personal_bests.py  test_planning.py  test_polar_merge.py  test_safety_rules.py  test_sample_data.py  test_storage.py  test_strava.py  test_streak.py  test_supabase_roles.py  test_validation_report.py
(+2 files in other folders)
